Feature: Added endpoint to validate a tooken
